--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,6 +46,9 @@
 	font-style: normal;
 	font-display: swap;
 }
+html, body {
+	height: 100%;
+}
 body {
 	font-family: "Atkinson", sans-serif;
 	margin: 0;
@@ -57,6 +60,8 @@ body {
 	overflow-wrap: break-word;
 	font-size: 20px;
 	line-height: 1.7;
+	display: flex;
+	flex-direction: column;
 }
 
 /* Unified image style used across the site */
@@ -79,6 +84,7 @@ main {
 	max-width: calc(100% - 2em);
 	margin: auto;
 	padding: 3em 1em;
+	flex: 1 0 auto;
 }
 h1,
 h2,
