feat: add newsletter popup component and integrate into footer
- Added a new NewsletterPopup component for email subscriptions.
- Integrated the NewsletterPopup into the Footer component.
- Updated FormattedDate component to handle optional date formats.
- Added devDependency for @astrojs/netlify in package.json.
- Created a new subscribers.json file to store email addresses.
- Updated BlogPost layout and blog page to improve rendering logic.
- Refined global CSS variables for a softer color palette and improved shadows.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,7 @@
 ---
 const today = new Date();
 import MinimalRotatingB from './MinimalRotatingB.astro';
+import MailPopup from './NewsletterPopup.astro';
 ---
 
 <footer>
@@ -24,6 +25,7 @@ import MinimalRotatingB from './MinimalRotatingB.astro';
  	</div>
 </footer>
 <MinimalRotatingB />
+<MailPopup />
 <style>
 	footer {
 		padding: .75rem 1rem .75rem 1rem;
