--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,18 +1,19 @@
 ---
 import { type CollectionEntry, getCollection, render } from 'astro:content';
 import BlogPost from '../../layouts/BlogPost.astro';
+export const prerender = true;
 
 export async function getStaticPaths() {
 	const posts = await getCollection('blog');
 	const visiblePosts = posts.filter((post) => !((post.data as any).draft));
 	return visiblePosts.map((post) => ({
 		params: { slug: post.id },
-		props: post,
+		props: { post },
 	}));
 }
 type Props = CollectionEntry<'blog'>;
 
-const post = Astro.props;
+const post = Astro.props.post as CollectionEntry<'blog'>;
 const { Content } = await render(post);
 ---
 
